# Oop_8

./: README.md  pyproject.toml
src/: circle.py  copy_list.py  listbox.py  picture.py  size.py
